--- a/MassAutoGarage/Views/HRMS_Employee/Employee.cshtml
+++ b/MassAutoGarage/Views/HRMS_Employee/Employee.cshtml
@@ -192,10 +192,9 @@
                                     <div class="col-xxl-3 col-md-4">
                                         <div>
                                             <label for="labelInput" class="form-label"> Employee Code  <code>*</code></label>
-                                            @*@Html.HiddenFor(m=>m.EmployeeId)*@
-
-                                            <input type="text" id="EmployeeId" />
-
+                                            @*<input type="text" id="EmployeeId" />*@
+                                       
+                                            @Html.HiddenFor(m => m.EmployeeId)
                                             @Html.TextBoxFor(m => m.EmployeeCode, new { @class = "form-control", tabindex = 1 })
                                             @Html.ValidationMessageFor(m => m.EmployeeCode, null, new { @class = "field-validation-error", data_valmsg_for = "ShortName" })
                                         </div>
@@ -734,6 +733,13 @@
 
 <script>
     $(document).ready(function () {
+
+        var EmployeeId = $("#EmployeeId").val();
+
+        if (EmployeeId!=0) {
+            $("#btnsave").val('Update');
+        }
+
     })
 </script>
 
