--- a/MassAutoGarage/Views/HRMS_Holiday/Holiday.cshtml
+++ b/MassAutoGarage/Views/HRMS_Holiday/Holiday.cshtml
@@ -206,11 +206,11 @@
                                     <table border="1" id="example" class="display table table-bordered mobile-optimised" style="width:100%;">
                                         <thead>
                                             <tr>
-                                                <th>S.N.</th>
+                                                <th style="width:5%">S.N.</th>
                                                 <th>Department</th>
                                                 <th>Holiday Date</th>
                                                 <th>Holiday Name</th>
-                                                <th>Action</th>
+                                                <th style="width:15%">Action</th>
                                             </tr>
                                         </thead>
                                         <tbody id="tBodyId">
