--- a/MassAutoGarage/Views/HRMS_Employee/Index.cshtml
+++ b/MassAutoGarage/Views/HRMS_Employee/Index.cshtml
@@ -102,8 +102,7 @@
                                 <th>Employee Name</th>
                                 <th>Designation</th>
                                 <th>Reporting Manager</th>
-                                @*<th>Photo</th>*@
-                                <th>Action</th>
+                                <th style="width:20%;">Action</th>
                             </tr>
                         </thead>
                         <tbody id="tBodyId">
@@ -402,6 +401,128 @@
     $(document).ready(function () {
         EmployeeList();
     })
+</script>
+
+
+<script>
+    $(document).ready(function () {
+        var queryString = new Array();
+        if (queryString.length == 0) {
+            if (window.location.search.split('?').length > 1) {
+                var params = window.location.search.split('?')[1].split('&');
+                for (var i = 0; i < params.length; i++) {
+                    var key = params[i].split('=')[0];
+                    var value = decodeURIComponent(params[i].split('=')[1]);
+                    queryString[key] = value;
+                }
+            }
+
+            $('#txtsearch').val(queryString[key]);
+        }
+    });
+
+    $('#txtsearch').change(function () {
+
+        searchfromDB();
+    });
+
+    function searchfromDB() {
+        debugger;
+
+        var SearchKey = $('#txtsearch').val();
+        if (SearchKey != "") {
+            $.ajax({
+                type: "Get",
+                url: "/HRMS_Employee/GetListByid",
+                data: { Key: SearchKey },
+                dataType: "json",
+                success: function (result) {
+                    $.each(result, function (i, v) {
+                        debugger;
+                        $("#example tbody").empty();
+
+                        var tableLength = $("#tBodyId tr").length;
+                        var SerialNo = tableLength + 1;
+                        var tr = "<tr>";
+                        tr += "<td>" + SerialNo + "</td>";
+                        /*   tr += "<td style='Display:none'>" + v.EmployeeIdKey + "</td>";*/
+                        tr += "<td style='Display:none'  class='EmployeeId_" + v.EmployeeId + "'>" + v.EmployeeId + "</td>";
+                        tr += "<td class='EmployeeCode_" + v.EmployeeId + "'>" + v.EmployeeCode + "</td>";
+                        tr += "<td class='EmployeeName_" + v.EmployeeId + "'>" + v.EmployeeName + "</td>";
+                        tr += "<td class='Designation_" + v.EmployeeId + "'>" + v.Designation + "</td>";
+                        tr += "<td class='ReportingManager_" + v.EmployeeId + "'>" + v.ReportingManager + "</td>";
+                        tr += "<td style='Display:none'  class='DeptID_" + v.EmployeeId + "'>" + v.DeptID + "</td>";
+                        tr += "<td style='Display:none' class='DepartmentName_" + v.EmployeeId + "'>" + v.DepartmentName + "</td>";
+                        tr += "<td style='Display:none' class='JoiningDate_" + v.EmployeeId + "'>" + v.JoiningDate + "</td>";
+                        tr += "<td style='Display:none' class='BranchId_" + v.EmployeeId + "'>" + v.BranchId + "</td>";
+                        tr += "<td style='Display:none' class='BranchName_" + v.EmployeeId + "'>" + v.BranchName + "</td>";
+                        tr += "<td style='Display:none' class='NationalityId_" + v.EmployeeId + "'>" + v.NationalityId + "</td>";
+                        tr += "<td style='Display:none' class='Nationality_" + v.EmployeeId + "'>" + v.Nationality + "</td>";
+                        tr += "<td style='Display:none' class='DateOfBirth_" + v.EmployeeId + "'>" + v.DateOfBirth + "</td>";
+                        tr += "<td style='Display:none' class='MaritalStatusId_" + v.EmployeeId + "'>" + v.MaritalStatusId + "</td>";
+                        tr += "<td style='Display:none' class='MaritalStatus_" + v.EmployeeId + "'>" + v.MaritalStatus + "</td>";
+                        tr += "<td style='Display:none' class='GenderBloodGroup_" + v.EmployeeId + "'>" + v.GenderBloodGroup + "</td>";
+                        tr += "<td style='Display:none' class='PassportNo_" + v.EmployeeId + "'>" + v.PassportNo + "</td>";
+                        tr += "<td style='Display:none' class='PassportIssueDate_" + v.EmployeeId + "'>" + v.PassportIssueDate + "</td>";
+                        tr += "<td style='Display:none' class='PassportExpiryDate_" + v.EmployeeId + "'>" + v.PassportExpiryDate + "</td>";
+                        tr += "<td style='Display:none' class='HomeCountryAirport_" + v.EmployeeId + "'>" + v.HomeCountryAirport + "</td>";
+                        tr += "<td style='Display:none' class='HomeCountryContactNumber1_" + v.EmployeeId + "'>" + v.HomeCountryContactNumber1 + "</td>";
+                        tr += "<td style='Display:none' class='HomeCountryContactNumber2_" + v.EmployeeId + "'>" + v.HomeCountryContactNumber2 + "</td>";
+                        tr += "<td style='Display:none' class='EmergencyContactNo_" + v.EmployeeId + "'>" + v.EmergencyContactNo + "</td>";
+                        tr += "<td style='Display:none' class='Email_" + v.EmployeeId + "'>" + v.Email + "</td>";
+                        tr += "<td style='Display:none' class='AccountNo_" + v.EmployeeId + "'>" + v.AccountNo + "</td>";
+                        tr += "<td style='Display:none' class='WPSDebitCardNumber_" + v.EmployeeId + "'>" + v.WPSDebitCardNumber + "</td>";
+                        tr += "<td style='Display:none' class='WPSExpiry_" + v.EmployeeId + "'>" + v.WPSExpiry + "</td>";
+                        tr += "<td style='Display:none' class='TotalLeavePerYear_" + v.EmployeeId + "'>" + v.TotalLeavePerYear + "</td>";
+                        tr += "<td style='Display:none' class='NoOfWorkingHours_" + v.EmployeeId + "'>" + v.NoOfWorkingHours + "</td>";
+                        tr += "<td style='Display:none' class='NoOfDays_" + v.EmployeeId + "'>" + v.NoOfDays + "</td>";
+                        tr += "<td style='Display:none' class='LabourCardNo_" + v.EmployeeId + "'>" + v.LabourCardNo + "</td>";
+                        tr += "<td style='Display:none' class='LabourCardExpiry_" + v.EmployeeId + "'>" + v.LabourCardExpiry + "</td>";
+                        tr += "<td style='Display:none' class='PersonCode_" + v.EmployeeId + "'>" + v.PersonCode + "</td>";
+                        tr += "<td style='Display:none' class='UAEContactNo1_" + v.EmployeeId + "'>" + v.UAEContactNo1 + "</td>";
+                        tr += "<td style='Display:none' class='UAEContactNo2_" + v.EmployeeId + "'>" + v.UAEContactNo2 + "</td>";
+                        tr += "<td style='Display:none' class='UAEAddress_" + v.EmployeeId + "'>" + v.UAEAddress + "</td>";
+                        tr += "<td style='Display:none' class='BasicSalary_" + v.EmployeeId + "'>" + v.BasicSalary + "</td>";
+                        tr += "<td style='Display:none' class='Transportation_" + v.EmployeeId + "'>" + v.Transportation + "</td>";
+                        tr += "<td style='Display:none' class='Accommodation_" + v.EmployeeId + "'>" + v.Accommodation + "</td>";
+                        tr += "<td style='Display:none' class='AdditionalAllowance_" + v.EmployeeId + "'>" + v.AdditionalAllowance + "</td>";
+                        tr += "<td style='Display:none' class='Standard_" + v.EmployeeId + "'>" + v.Standard + "</td>";
+                        tr += "<td style='Display:none' class='Skill_" + v.EmployeeId + "'>" + v.Skill + "</td>";
+                        tr += "<td style='Display:none' class='AccommodationAllowance_" + v.EmployeeId + "'>" + v.AccommodationAllowance + "</td>";
+                        tr += "<td style='Display:none' class='Cola_" + v.EmployeeId + "'>" + v.Cola + "</td>";
+                        tr += "<td style='Display:none' class='Education_" + v.EmployeeId + "'>" + v.Education + "</td>";
+                        tr += "<td style='Display:none' class='CarAllowance_" + v.EmployeeId + "'>" + v.CarAllowance + "</td>";
+                        tr += "<td style='Display:none' class='Telephone_" + v.EmployeeId + "'>" + v.Telephone + "</td>";
+                        tr += "<td style='Display:none' class='Others_" + v.EmployeeId + "'>" + v.Others + "</td>";
+                        tr += "<td style='Display:none' class='TotalSalary_" + v.EmployeeId + "'>" + v.TotalSalary + "</td>";
+                        tr += "<td style='Display:none' class='EmiratesID_" + v.EmployeeId + "'>" + v.EmiratesID + "</td>";
+                        tr += "<td style='Display:none' class='EmiratesIDExpiry_" + v.EmployeeId + "'>" + v.EmiratesIDExpiry + "</td>";
+                        tr += "<td style='Display:none' class='VisaUIDNo_" + v.EmployeeId + "'>" + v.VisaUIDNo + "</td>";
+                        tr += "<td style='Display:none' class='VisaFileNo_" + v.EmployeeId + "'>" + v.VisaFileNo + "</td>";
+                        tr += "<td style='Display:none' class='VisaPlaceOfIssue_" + v.EmployeeId + "'>" + v.VisaPlaceOfIssue + "</td>";
+                        tr += "<td style='Display:none' class='VisaIssueDate_" + v.EmployeeId + "'>" + v.VisaIssueDate + "</td>";
+                        tr += "<td style='Display:none' class='VisaExpiry_" + v.EmployeeId + "'>" + v.VisaExpiry + "</td>";
+                        tr += "<td style='Display:none' class='InsuranceProvider_" + v.EmployeeId + "'>" + v.InsuranceProvider + "</td>";
+                        tr += "<td style='Display:none' class='InsuranceNumber_" + v.EmployeeId + "'>" + v.InsuranceNumber + "</td>";
+                        tr += "<td style='Display:none' class='InsuranceExpiry_" + v.EmployeeId + "'>" + v.InsuranceExpiry + "</td>";
+                        tr += "<td style='Display:none' class='StatusId_" + v.EmployeeId + "'>" + v.StatusId + "</td>";
+                        tr += "<td style='Display:none' class='Status_" + v.EmployeeId + "'>" + v.Status + "</td>";
+                        tr += "<td style='Display:none' class='ResignationTerminationDate_" + v.EmployeeId + "'>" + v.ResignationTerminationDate + "</td>";
+                        tr += "<td style='Display:none' class='Remarks_" + v.EmployeeId + "'>" + v.Remarks + "</td>";
+                        tr += "<td style='Display:none' class='Organization_" + v.EmployeeId + "'>" + v.Organization + "</td>";
+                        tr += "<td style='Display:none' class='TicketIssuedPerYear_" + v.EmployeeId + "'>" + v.TicketIssuedPerYear + "</td>";
+                        tr += "<td style='Display:none'>" + "<img src='" + v.Photo + "' style='height:90px;width:90px;' class='Photo_" + v.EmployeeId + "'/>" + "</td>";
+                        tr += "<td><a onclick='return ViewEmployeeDetails(" + v.EmployeeId + ")' class='btn btn-sm btn-primary edit-item-btn'>View<i class='fa fa-eye'></i></a>  <a onclick='return EditEmployee(" + v.EmployeeId + ")' class='btn btn-sm btn-success edit-item-btn'>Edit<i class='fa fa-edit'></i></a> <a onclick='return DeleteEmployee(" + v.EmployeeId + ")' class='btn btn-sm btn-danger remove-item-btn DeleteContactTr'><i class='fa fa-trash' aria-hidden='true'></i>Delete</a></td>";
+                        tr += "</tr>";
+                        $("#tBodyId").append(tr);
+                    });
+                }
+            });
+        } else {
+            $("#example tbody").empty();
+            EmployeeList();
+        }
+    }
 </script>
 
 
