--- a/MassAutoGarage/Views/HRMS_SalesTarget/Index.cshtml
+++ b/MassAutoGarage/Views/HRMS_SalesTarget/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MassAutoGarage.Models.AddOnsMaster.AddOnsMasterModel>
+﻿@model List<MassAutoGarage.Models.HRMS_SalesTarget.HRMSSalesTargetModel>
 
 @{
     ViewBag.Title = "Sales Target";
@@ -170,8 +170,6 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.2.2/css/buttons.dataTables.min.css">
 }
 
-
-
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
@@ -184,16 +182,6 @@
                     </div>
                 </div>
             </div>
-
-            @*<div class="card-header">
-                <h5 class="card-title mb-0">SALES TARGET</h5>
-                <a href="@Url.Action("SalesTarget","HRMS_SalesTarget")" class="btn btn-primary" style="float:right;" tabindex="1"><i class="ri-add-circle-line align-middle me-1"></i>ADD SALES TARGET</a>
-            </div>*@
-
-
-
-
-
             <div class="card-body">
                 <div class="col-lg-12">
                     <div class="live-preview">
@@ -219,61 +207,66 @@
                             <tr>
                                 <th style=" width: 1%;">S.N.</th>
                                 <th style="white-space: nowrap">Sales Name</th>
+                                <th style="white-space: nowrap">From Date</th>
+                                <th style="white-space: nowrap">To Date</th>
+                                <th style="white-space: nowrap">Target</th>
                                 <th style=" width: 15%;">Action</th>
-
                             </tr>
                         </thead>
                         <tbody>
-                        </tbody>
-                    </table>
 
-                    <table id="CompanyGroup" class="table pure-table" style="width: 100%; display: none;" cellspacing="0" cellpadding="0">
-                        <thead>
-                            <tr>
-                                <th colspan="5">
-                                    <img src="@ViewBag.compnylgo" alt="" style="width: 213px; border-radius: 7px;">
-                                    <span style=" float: right;"> <b>Address  :-</b> @ViewBag.compnyAddress</span>
-                                </th>
-                            </tr>
-                            <tr>
-                                <th style=" width: 1%;">Srl.No</th>
-                                <th style="white-space: nowrap">Sales Name</th>
-                            </tr>
-                        </thead>
-                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td data-th="Srl.No.">@i</td>
+                                    <td data-th="Srl.No.">@item.SalesMan</td>
+                                    <td data-th="Code">@item.FromDate</td>
+                                    <td data-th="Code">@item.ToDate</td>
+                                    <td data-th="Code">@item.Target</td>
+                                    <td data-th="Action">
+
+                                        <div class="d-flex gap-2">
+                                            <div class="edit">
+
+                                                <a href="/HRMS_EmployeeDocuments/EmployeeDocuments?Id=@item.Id" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Edit <i class="fa fa-edit"></i></a>
+                                            </div>
+                                            <div class="remove">
+                                                <a href="javascript:void(0)" onclick="return DeleteSalesTarget('@item.Id')" class="btn btn-sm btn-danger remove-item-btn">Delete <i class="fa fa-trash" aria-hidden="true"></i></a>
+
+
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                                i++;
+                            }
                         </tbody>
                     </table>
                 </div>
             </div>
         </div>
     </div>
-
 </div>
 
 @section scripts{
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-
-    <!--datatable js-->
-    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js"></script>
-    <script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/2.2.2/js/dataTables.buttons.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/2.2.2/js/buttons.print.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/2.2.2/js/buttons.html5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-
-    <script src="~/assets/js/pages/datatables.init.js"></script>
-
+    <!-- prismjs plugin -->
+    <script src="~/assets/libs/prismjs/prism.js"></script>
     <!-- App js -->
     <script src="~/assets/js/app.js"></script>
 }
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
+<script src="https://unpkg.com/sweetalert2@7.8.2/dist/sweetalert2.all.js"></script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-sweetalert/1.0.1/sweetalert.css" rel="stylesheet" />
+
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<link rel="stylesheet" href="/resources/demos/style.css">
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="~/MyApp/HRMS_SalesTarget.js"></script>
+
 
 <script>
     $(document).ready(function () {
-
         var queryString = new Array();
         if (queryString.length == 0) {
             if (window.location.search.split('?').length > 1) {
@@ -287,56 +280,7 @@
 
             $('#txtsearch').val(queryString[key]);
         }
-
-
-
     });
-
-    function ConfirmDelete(GrdId) {
-        debugger;
-        var x = confirm("Are you sure you want to delete?");
-        if (x)
-
-            if (GrdId > 0) {
-                $.ajax({
-                    url: '/AddOnsMaster/DeleteAddONS',
-                    type: "GET",
-                    dataType: "json",
-                    data: { AddONSID: GrdId },
-                    success: function (result) {
-                        if (result == "3") {
-
-                            swal({
-                                title: "Success",
-                                text: "Records Successfully Deleted",
-                                type: "success",
-                            }).then(function (isConfirm) {
-                                if (isConfirm) {
-
-                                    window.location.reload();
-                                } else {
-
-                                }
-                            });
-
-                        } else {
-
-                            swal("Warning", "Records not Deleted", "warning");
-                        }
-
-                    },
-                    error: function (xhr, status) {
-                        console.log(status);
-                        console.log(xhr);
-                    },
-                    complete: function () {
-
-                    }
-                });
-            }
-            else
-                return false;
-    }
 
     $('#txtsearch').change(function () {
 
@@ -347,76 +291,55 @@
         debugger;
 
         var SearchKey = $('#txtsearch').val();
-        var url = "/AddOnsMaster/OnsDetails?Key=" + SearchKey;
+        var url = "/HRMS_SalesTarget/Index?Key=" + SearchKey;
         window.location.href = url;
     }
-    function generate() {
-        var doc = new jspdf.jsPDF()
 
-        // Simple data example
-        //var head = [['ID', 'Country', 'Rank', 'Capital']]
-        //var body = [
-        //    [1, 'Denmark', 7.526, 'Copenhagen'],
-        //    [2, 'Switzerland', 7.509, 'Bern'],
-        //    [3, 'Iceland', 7.501, 'Reykjavík'],
-        //]
-        //doc.autoTable({ head: head, body: body })
 
-        // Simple html example
-        doc.autoTable({ html: '#CompanyGroup' })
+    function DeleteSalesTarget(Id) {
+        debugger;
+        var x = confirm("Are you sure you want to delete?");
+        if (x == true) {
+            $.ajax({
+                type: 'POST',
+                url: '/HRMS_SalesTarget/DeleteSalesTarget',
+                data: { Id: Id },
+                dataType: 'json',
+                success: function (data) {
+                    if (data.Result == "yes") {
+                        swal({
+                            title: "Success",
+                            text: "Records Successfully Deleted",
+                            type: "success",
+                        }).then(function (isConfirm) {
+                            if (isConfirm) {
+                                window.location.reload();
+                            } else {
+                            }
+                        });
+                    }
+                    else {
+                        swal("Warning", "Records not Deleted", "warning");
+                    }
+                },
+                error: function (xhr, status) {
+                    console.log(status);
+                    console.log(xhr);
+                },
+                complete: function () {
+                }
+            });
+        }
+        else {
+            return false;
+        }
 
-        doc.save('Nationality.pdf')
     }
 
-    $(function () {
-
-        //var tble = document.getElementById('CompanyGroup');
-        //var row = tble.rows;
-        //var i = 6;
-        //for (var j = 0; j < row.length; j++) {
-
-
-        //    row[j].deleteCell(i);
-        //}
 
 
 
-        var table = $('#example').DataTable();
-        $("#btnExport").click(function (e) {
-            debugger;
-
-            // Getting the table
 
 
-            table.page.len(-1).draw();
-            window.open('data:application/vnd.ms-excel,' +
-                encodeURIComponent($('#example').parent().html()));
-            setTimeout(function () {
-                table.page.len(10).draw();
-            }, 1000)
-
-        });
-    });
-</script>
-<script type="text/javascript">
-    $("body").on("click", "#btnPdf", function () {
-        debugger;
-
-        $('#CompanyGroup').css("display", "inline-table");
-
-        html2canvas($('#CompanyGroup')[0], {
-            onrendered: function (canvas) {
-                var data = canvas.toDataURL();
-                var docDefinition = {
-                    content: [{
-                        image: data,
-                        width: 500
-                    }]
-                };
-                pdfMake.createPdf(docDefinition).download("AddONSDetails.pdf");
-                $('#CompanyGroup').css("display", "none");
-            }
-        });
-    });
 
 </script>
